--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Mateo m",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "btoa": "^1.2.1",
+    "command-line-args": "^5.1.1",
+    "express": "^4.17.1",
+    "jssha": "^3.2.0"
   }
 }
