--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "btoa": "^1.2.1",
     "command-line-args": "^5.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jssha": "^3.2.0"
   }
